crates/tests/libs/bindgen/data/error/enum_arg_requires_variant_name/input.rdl

#[winrt]
mod Test {
    #[repr(i32)]
    enum Color { Red = 0, Green = 1, Blue = 2, }
    attribute PaletteAttribute { fn(value: Color); }

    #[Palette(1)]
    class MyClass {}
}
        